<resources>
    <!-- app strings -->
    <string name="app_name">How You Doin\'?</string>
    <string name="title_activity_main">Hello World Assignment</string>
    <string name="empty" />

    <!-- hint and descriptions -->
    <string name="enter_first_name">enter first name</string>
    <string name="enter_email_address">enter email address</string>
    <string name="enter_username">enter username</string>
    <string name="enter_age">enter age</string>
    <string name="enter_date_of_birth">set date of birth</string>
    <string name="empty_dob">mm/dd/yyyy</string>
    <string name="enter_last_name">enter last name</string>
    <string name="enter_occupation">enter occupation</string>
    <string name="enter_description">enter description about yourself\n\n</string>
    <string name="hint_last_name">last name</string>
    <string name="hint_first_name">first name</string>

    <!-- buttons -->
    <string name="submit">submit</string>
    <string name="name_date">Pettinger, Kevin 5/6/2020</string>
    <string name="create_a_new_account">Create A New Account</string>

    <!-- testing -->
    <string name="uTestFirstName">Kevin</string>
    <string name="uTestLastName">Pettinger</string>
    <string name="uTestFullName">Kevin Pettinger</string>
    <string name="uTestUsername">zxkevinxz</string>
    <string name="uTestEmail">kevinpettinger@gmail.com</string>
    <string name="uTestBadEmail">kevingmail.com</string>
    <string name="uTestDescription">Hi, I\'m Kevin. This is my profile description.</string>
    <string name="uTestOccupation">software developer</string>
    <string name="uTestAge">37</string>
    <string name="uTestNameLength">kevineijfoisdajfiuosdhfjsiduahfsiudhfsiuahfiusdhfsaiuhf</string>

    <!-- error messages -->
    <string name="ERR_FIRST_NAME">Please enter a first name\n</string>
    <string name="ERR_USERNAME">Please enter a username\n</string>
    <string name="ERR_EMAIL">Please enter a valid email\n</string>
    <string name="ERR_NO_DOB">Please enter a date of birth\n</string>
    <string name="ERR_DOB">Date of birth is not valid, must be at least 18 to join\n</string>
    <string name="ERR_LAST_NAME">Please enter a last name\n</string>
    <string name="ERR_OCCUPATION">Please enter an occupation\n</string>
    <string name="ERR_DESCRIPTION">Please enter a description of yourself\n</string>
    <string name="ERR_NAME_LENGTH">First or Last name cannot be longer than 25 characters\n</string>

    <!-- thank you message -->
    <string name="THANKS">Thanks for signing up,\s</string>
    <string name="THANKS_EXCLAMATION">!</string>

    <!-- profile template -->
    <string name="profile_photo">profile photo</string>
    <string name="profile_name">profile full name</string>
    <string name="profile_age">99</string>
    <string name="profile_occupation">profile occupation</string>
    <string name="max_name">KKKKKKKKKKKKKKKKKKKKKKKKK KKKKKKKKKKKKKKKKKKKKKKKKK</string>
    <string name="max_occ">KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKAAAAAAAAAAAAAA</string>

    <!-- lorem ipsum -->
    <string name="lorem">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="testScrollLorem">t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).t is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters, as opposed to using \'Content here, content here\', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for \'lorem ipsum\' will uncover many web sites still in their infancy. Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="ERR_OCC_LENGTH">Occupation cannot be greater than 40 characters</string>
    <string name="tab_1">Profile</string>
    <string name="tab_2">Matches</string>
    <string name="tab_3">Settings</string>
    <string name="title_activity_test_tabs">TestTabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="matches_text">Future matches go here</string>
    <string name="settings_text">settings will go here</string>
    <string name="matches_image">matches image</string>
    <string name="matches_fav_desc">fav icon</string>
    <string name="faved_msg">"You liked "</string>
    <string name="favWhite">white</string>
    <string name="favRed">red</string>
    <string name="uTestMatchesName">Sleepy Lily</string>
    <string name="fav_icon_set_content">" fav icon"</string>
    <string name="uTestFavIconDesc">Cool Guy Mike fav icon</string>
    <string name="uTestToast">You liked Cool Guy Mike!</string>
    <string name="run_time_exception_listener">\" must implement OnListFragmentInteractionListener\"</string>
    <string name="uTestMike">Cool Guy Mike</string>
    <string name="uTestMatchAge">45</string>
    <string name="uTestMatchJob">spaceman</string>
    <string name="gender_title">Gender</string>
    <string name="set_gender_hint">set gender</string>
    <string name="maximum_search_distance_miles">Maximum Search Distance (Miles)</string>
    <string name="search_distance_hint">set search distance</string>
    <string name="age_range_title">Age Range</string>
    <string name="set_age_range_hint">set age range</string>
    <string name="daily_matches_reminder_time">Daily Matches Reminder Time</string>
    <string name="set_reminder_time_hint">set reminder time</string>
    <string name="privacy_title">Privacy</string>
    <string name="privacy_input">set privacy - public or private</string>
    <string name="save_changes_settings">Save Changes</string>
    <string name="settings_saved_toast">Settings Saved</string>
    <string name="gender_update_error">Please set a gender\n</string>
    <string name="age_update_error">Age range must be between 0-99\n</string>
    <string name="distance_update_error">Distance must be between 0-9999</string>
    <string name="age_range_default">0</string>
    <string name="distance_default">0</string>
    <string name="genderTestMale">Male</string>
    <string name="privacyTestPublic">Public</string>
    <string name="ageRangeTest30">30</string>
    <string name="distanceInputTest50">50</string>
    <string name="reminderTimeTest12pm">12:00 PM</string>
    <string name="enable_location">Enable Location</string>
    <string name="location_message">Your Locations Settings is set to \'Off\'. Please Enable Location to use this app</string>
    <string name="location_settings">Location Settings</string>
    <string name="location_cancel">Cancel</string>
    <string name="cancel_location">Cancel</string>
    <string name="deny_location">Deny</string>
    <string name="runtime_title">Enable App Permission</string>
    <string name="runtime_msg">App needs location permission, please allow.</string>
    <string name="runtime_app_perm">App Permissions</string>
    <string name="cancel_runtime">Cancel</string>
    <string name="range_too_high">100000</string>
    <string name="settings_errors">Please set a gender\nAge range must be between 0-99\nDistance must be between 0-9999</string>

    <string-array name="gender_array">
        <item />
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="privacy_array">
        <item>Private</item>
        <item>Public</item>
    </string-array>
    <string-array name="reminder_array">
        <item>No Reminder</item>
        <item>12:00 AM</item>
        <item>01:00 AM</item>
        <item>02:00 AM</item>
        <item>03:00 AM</item>
        <item>04:00 AM</item>
        <item>05:00 AM</item>
        <item>06:00 AM</item>
        <item>07:00 AM</item>
        <item>08:00 AM</item>
        <item>09:00 AM</item>
        <item>10:00 AM</item>
        <item>11:00 AM</item>
        <item>12:00 PM</item>
        <item>01:00 PM</item>
        <item>02:00 PM</item>
        <item>03:00 PM</item>
        <item>04:00 PM</item>
        <item>05:00 PM</item>
        <item>06:00 PM</item>
        <item>07:00 PM</item>
        <item>08:00 PM</item>
        <item>09:00 PM</item>
        <item>10:00 PM</item>
        <item>11:00 PM</item>
    </string-array>

    <!-- unsorted -->

</resources>
