<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:layout_margin="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/image_height"

            android:contentDescription="@string/profile_photo"
            android:src="@drawable/princesslily"
            android:layout_marginTop="@dimen/image_margin_top"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/profile_header_height"

            android:layout_marginTop="@dimen/header_mTop"
            android:layout_marginStart="@dimen/header_mStart"
            android:layout_marginEnd="@dimen/header_mEnd"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/profileHeader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/profileName"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="@dimen/profile_name_height"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintWidth_percent="0.75"
                    android:text="@string/profile_name"
                    android:textSize="@dimen/name_font_size"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/input_margins"
                    android:layout_marginTop="@dimen/profile_name_mTop"
                    app:layout_constraintTop_toTopOf="@id/profileHeader"
                    app:layout_constraintStart_toStartOf="@id/profileHeader"
                    />

                <TextView
                    android:id="@+id/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_age"
                    android:textSize="@dimen/name_font_size"
                    app:layout_constraintStart_toEndOf="@id/profileName"
                    app:layout_constraintTop_toTopOf="@id/profileHeader"
                    android:layout_marginStart="@dimen/age_spacing"
                    android:layout_marginTop="@dimen/profile_name_mTop"
                    />

                <TextView
                    android:id="@+id/profileOccupation"
                    android:layout_width="@dimen/zero_dp"
                    android:layout_height="@dimen/profile_occ_height"
                    android:autoSizeTextType="uniform"
                    app:layout_constraintWidth_percent="0.75"
                    android:text="@string/profile_occupation"
                    android:textSize="@dimen/occupation_font_size"
                    app:layout_constraintStart_toStartOf="@id/profileHeader"
                    app:layout_constraintTop_toBottomOf="@id/profileName"
                    android:layout_marginStart="@dimen/profile_occ_start_margin"
                    />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>



        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/profile_desc_mTop"
            android:text="@string/lorem"
            android:layout_marginStart="@dimen/profile_desc_mStart"
            android:layout_marginEnd="@dimen/profile_desc_mEnd"
            android:layout_marginBottom="@dimen/cardview_desc_mBot"
            app:cardBackgroundColor="@color/cardview_desc_color"
            >

            <TextView
                android:id="@+id/profileDescription"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/lorem"
                android:padding="@dimen/profile_desc_padding"
                />

        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>